--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <p>This is an example for Local Repo</p>
+<p>This is a new feature branch feature1(dropdown)</p>
 <p>This is a new feature branch feature1(button)</p>
